# FASTDB

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  configure  configure.ac  docker-compose.yaml  ruff.toml  setup_fastdb.sh
admin/spin/resspect_test/: fakebroker.yaml  kafka-data-pvc.yaml  kafka.yaml  mongodb-pvc.yaml  mongodb.yaml  postgres-pvc.yaml  postgres.yaml  query-pruner.yaml  query-runner.yaml  secrets.yaml  shell.yaml  webserver-cert.yaml  webserver.yaml
admin/spin/rknop_dev/: fakebroker.yaml  kafka-data-pvc.yaml  kafka.yaml  mongodb-pvc.yaml  mongodb.yaml  postgres-pvc.yaml  postgres.yaml  query-pruner.yaml  query-runner.yaml  secrets.yaml  shell.yaml  webserver-cert.yaml  webserver.yaml
admin/spin/rknop_dev_2/: fakebroker.yaml  kafka-data-pvc.yaml  kafka.yaml  mongodb-pvc.yaml  mongodb.yaml  postgres-pvc.yaml  postgres.yaml  query-pruner.yaml  query-runner.yaml  secrets.yaml  shell.yaml  webserver-cert.yaml  webserver.yaml
client/: Makefile.am  Makefile.in  fastdb_client.py
db/: 2025-02-18_001_init.sql  2025-03-10_001_snana.sql  2025-03-21_001_alert.sql  2025-03-26_001_sourcepulltime.sql  2025-04-25-spectrumcycle.sql  2025-05-01_npix_order29.sql  2025-07-18_lc_view.sql  2025-07-19_skymap_helpers.sql  apply_migrations.py  scorched_earth.py  wipe_all_data.py
docker/kafka/: Dockerfile
docker/mongodb/: Dockerfile  mongod.conf  run_mongo.sh
docker/postgres/: Dockerfile  run_postgres.sh
docker/query_runner/: Dockerfile
docker/webserver/: Dockerfile
docs/: conf.py  developers.rst  index.rst  overview.rst  usage.rst
examples/: using_fastdb_client.ipynb
fastdb/: manage.py
fastdb/alerts/: Data.py  Snapshots.py  forms.py  models.py  urls.py
fastdb/alerts/management/commands/: load_fastdb.py
fastdb/alerts/migrations/: 0004_partitioning_v1_2.py
fastdb/alerts/templates/: snapshots_index.html
fastdb/fastdb/: asgi.py  wsgi.py
fastdb_api/: fastdb_api.py
notes/: brokerconsumer_config.yaml  kafka.txt  post_kafka_message.py  read_kafka_messages.py  resspect-test  rob_stress_2025apr.txt
old/fastdb/alerts/: insert.sql  views.py
old/fastdb/fastdb/: urls.py
old/get_alerts/: generate_alerts.py
share/: Makefile.am  Makefile.in
share/avsc/: README.md  fastdb_test_0.1.Alert.avsc  fastdb_test_0.1.BrokerMessage.avsc  fastdb_test_0.1.DiaForcedSource.avsc  fastdb_test_0.1.DiaObject.avsc  fastdb_test_0.1.DiaSource.avsc
src/: Makefile.am  Makefile.in  apconfig.py.in  db.py  dbapp.py  kafka_consumer.py  ltcv.py  parquet_export.py  rkwebutil.py  server.py  spectrum.py  util.py
src/admin/: DiaForcedSource.csv  DiaObject.csv  DiaSource.csv  README.md  csv_to_avsc.py  dump_to_parquet.py  fastdb_loader.py  load_snana_fits.py
src/services/: brokerconsumer.py  dr_importer.py  long_query_runner.py  projectsim.py  source_importer.py
src/static/: fastdb.js  fastdb_start.js
src/webserver/: Makefile.am  Makefile.in  baseview.py  dbapp.py  ltcv.py  ltcvapp.py  server.py  spectrumapp.py
src/webserver/static/: fastdb.css  fastdb.js  fastdb_ns.js  fastdb_start.js  objectinfo.js  objectlist.js  objectsearch.js
src/webserver/templates/: base.html  fastdb_webap.html
tests/: conftest.py  elasticc2_test_data.tar.bz2  fakebroker.py  test_fakebroker.py  test_ltcv.py  test_ltcv_object_search.py  test_parquet_export.py  test_util.py
tests/admin/: conftest.py  test_load_snana_fits.py
tests/db/: basetest.py  test_authuser.py  test_diaforcedsource.py  test_diaobject.py  test_diasource.py  test_hostgalaxy.py  test_passwordlink.py  test_ppdb.py  test_processingversion.py  test_queryqueue.py  test_snapshot.py  test_snapshotlinks.py  test_spectrumtables.py
tests/dbapp/: test_short_query.py  test_sql_queries.py
tests/fixtures/: alertcycle.py
tests/secrets/: postgres_ro_password
tests/services/: brokerconsumer.yaml  test_brokerconsumer.py  test_projectsim.py  test_sourceimporter.py
tests/webserver/: test_ltcvapp.py  test_server.py  test_spectrumapp.py  test_spectrumcycle.py
