AUTOMAKE_OPTION = subdicr-objects

sharedir = @installdir@/share
avscdir = @installdir@/share/avsc

avsc_DATA = avsc/fastdb_test_0.1.Alert.avsc \
	avsc/fastdb_test_0.1.DiaForcedSource.avsc \
	avsc/fastdb_test_0.1.DiaObject.avsc \
	avsc/fastdb_test_0.1.DiaSource.avsc \
	avsc/fastdb_test_0.1.BrokerMessage.avsc
