AUTOMAKE_OPTION = subdir-objects

webapdir = @webapdir@
templdir = @webapdir@/templates
staticdir = @webapdir@/static

webap_DATA = apconfig.py baseview.py dbapp.py db.py server.py util.py \
	../extern/rkwebutil/rkwebutil.py ../extern/rkwebutil/rkauth_flask.py

static_DATA = static/fastdb.css static/fastdb.js static/fastdb_start.js \
	../extern/rkwebutil/rkwebutil.js ../extern/rkwebutil/rkauth.js ../extern/rkwebutil/resetpasswd_start.js

templ_DATA = templates/base.html templates/fastdb_webap.html
