AUTOMAKE_OPTION = subdir-objects

webapdir = @installdir@/webserver
templdir = @installdir@/webserver/templates
staticdir = @installdir@/webserver/static

webap_DATA = baseview.py dbapp.py server.py \
	../../extern/rkwebutil/rkwebutil.py ../../extern/rkwebutil/rkauth_flask.py

static_DATA = static/fastdb.css static/fastdb.js static/fastdb_start.js \
	../../extern/rkwebutil/rkwebutil.js ../../extern/rkwebutil/rkauth.js \
	../../extern/rkwebutil/resetpasswd_start.js

templ_DATA = templates/base.html templates/fastdb_webap.html
